# ocpp-serverless-example

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml
ocpp_router_example/: app.py
ocpp_router_example/ocpp/: router.py
ocpp_router_example/routers/: provisioning.py
ocpp_serverless_example/: charge_point.py  charging_station.py  connection_aws.py  context_aws.py  context_default.py  lambda_function.py  lambda_route.py  models.py
tests/: test_ocpp_serverless.py
