[tool.poetry]
name = "ocpp-serverless-example"
version = "0.1.0"
description = "ocpp event based message handling example"
authors = []

[tool.poetry.dependencies]
python = "3.8.1"
websockets = "8.1"
ocpp = "0.8.1"
boto3 = "1.16.56"
redis = "3.5.3"

[tool.poetry.dev-dependencies]
pytest = "5.4.3"
pytest-asyncio = "0.14.0"
black = "20.8b1"
flake8 = "3.8.2"
flake8-bandit = "2.1.2"
flake8-black = "0.2.0"
flake8-bugbear = "20.1.4"
isort = "5.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
